musthavemenus.com (archived on 2008-02-16)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4831,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.81,
  "homepage_snapshot_redirected_domain": "musthavemenus.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080409194321id_/http://www.musthavemenus.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080409194321id_/http%3A//musthavemenus.com",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "musthavemenus.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080216170100id_/http%3A//www.musthavemenus.com/menu/privacyPolicy/view.do",
  "policy_title": "Privacy Policy",
  "policy_url": "musthavemenus.com/menu/privacyPolicy/view.do",
  "sha1": "a26833868cd3bdd8ba6cb5d501380d40fc3130eb",
  "simhash": 18331682614187910742,
  "simhash_updated": true,
  "site_hostname": "musthavemenus.com",
  "site_url": "http://musthavemenus.com",
  "smog": 14.65,
  "strict_updated": true,
  "timestamp": "20080216170100",
  "word_count": 763,
  "year": 2008
}

--- a/m/mu/mus/musthavemenus.com.html
+++ b/m/mu/mus/musthavemenus.com.html
@@ -1,8 +1,7 @@
-<!--The following is the downloaded HTML source of the musthavemenus.com privacy policy that was archived on 2007-08-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070802015431id_/http%3A//www.musthavemenus.com/menu/privacyPolicy/view.do) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the musthavemenus.com privacy policy that was archived on 2008-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080216170100id_/http%3A//www.musthavemenus.com/menu/privacyPolicy/view.do) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
-
 
 
 
@@ -15,20 +14,24 @@
 <script language="Javascript">
 <!--
 
-    function printPlural(value, plural, singluar) {
-      if(value == 1) {
-        document.write(value + " " + singular);
-      }
-      else {
-        document.write(value + " " + plural);
-      }
+  function printPlural(value, plural, singular) {
+    if(value == 1) {
+      document.write(value + " " + singular);
     }
+    else {
+      document.write(value + " " + plural);
+    }
+  }
 // -->
 </script>
 
 <!--- end header.jsp -->
 
+<title>Privacy Policy</title>
 
+
+
+ 
 
 </head>
 <body>
@@ -46,7 +49,7 @@
 	
 	<div id="smnav">
 
-	<a href="/menu/login.do" rel="nofollow">member login</a> <a href="/menu/faq/view.do" rel="nofollow">help</a> <a href="http://www.musthavemenus.com">MustHaveMenus.com home</a>
+	<a href="http://www.musthavemenus.com/menu/login.do" rel="nofollow">member login</a> <a href="http://www.musthavemenus.com/menu/faq/view.do" rel="nofollow">help</a> <a href="http://www.musthavemenus.com">home</a>
 	
 
 	
@@ -57,21 +60,21 @@
 	
 	
 	<li>
-	<a rel="nofollow" href="/menu/member.do">MyHome</a>
+	<a rel="nofollow" href="http://www.musthavemenus.com/menu/member.do">MyHome</a>
 	</li>
 	
 	
 	
 	
 	<li>
-	<a href="/menu/browse.do">Images</a>
+	<a href="http://www.musthavemenus.com/menu/browse.do">Images</a>
 	</li>
 	
 	
 	
 	
 	<li>
-	<a href="/menu/gallery.do">Templates</a>
+	<a href="http://www.musthavemenus.com/menu/gallery.do">Templates</a>
 	</li>
 	
 
@@ -81,7 +84,7 @@
 	
 	
 	
-	<li><a href="/menu/dc.do">Design Center</a></li>
+	<li><a href="http://www.musthavemenus.com/menu/dc.do">Design Center</a></li>
 	
 
 	</ul>
@@ -96,31 +99,30 @@
 	
 <div id="searchbar">
 	
-	<table id="fixed">
+	<table width="750">
 	<tbody><tr>
-	<td><!-- no login -->
-<app:noauth>
-<b>For food clipart and menu templates, <a href="/menu/register.do" rel="nofollow">begin your 7-day FREE TRIAL</a> • <a href="/menu/learnmore.do">Find Out More</a></b>
-</app:noauth>
-
-<!-- after login -->
-<app:auth>
-
-</app:auth></td>
-<form name="searchForm" method="post" action="/menu/search.do"></form>	
-	<td align="right" style="padding-right:15px;"><b>search</b> 
-	<input type="text" name="query" value="">
-	<input type="submit" name="submit" value="go" class="submit"></td>
-
-<script type="text/javascript" language="JavaScript">
-  <!--
-  var focusControl = document.forms["searchForm"].elements["query"];
-
-  if (focusControl.type != "hidden" && !focusControl.disabled) {
-     focusControl.focus();
-  }
-  // -->
-</script>
+	<td><b>For Menu clipart &amp; templates, <a href="https://www.musthavemenus.com/menu/register.do" rel="nofollow">Begin 7-day FREE TRIAL</a> • <a href="http://www.musthavemenus.com/menu/learnmore.do">Learn More</a></b>
+</td>
+<form method="post" action="/menu/validateSearch.do"></form>	
+	<td align="right"><nobr>
+	<b>search</b>
+	<select id="search-type" name="type">
+	  <option value="-1">Any</option>
+	  <option value="1">Clipart</option>
+	  <option value="2">Photos</option>
+	  <option value="5">Templates</option>
+    
+	  <option value="7">Borders</option>
+	  <option value="8">Backgrounds</option>
+	  <option value="9">Word Art</option>
+    
+	  <option value="13">Powerpoint</option>
+	</select>
+	
+	
+	<input id="search-query" type="text" name="query">
+	
+	<input id="search-go" type="submit" name="submit" value="go" class="submit"></nobr></td>
 
 	</tr>
 	</tbody></table>
@@ -141,16 +143,16 @@
 <h1>Privacy Policy</h1>
 <br>
 
-MustHaveMenus.com values your privacy. You may contact us any time to learn more about this privacy policy by sending email to <a href="mailto:service@MustHaveMenus.com">service@MustHaveMenus.com</a>. This Privacy Statement describes how MustHaveMenus.com collects and uses information about you when you use the MustHaveMenus.com web site ("Site").
+MustHaveMenus.com values your privacy. You may contact us any time to learn more about this privacy policy by sending email to <a href="mailto:Contact@MustHaveMenus.com">Contact@MustHaveMenus.com</a>. This Privacy Statement describes how MustHaveMenus.com collects and uses information about you when you use the MustHaveMenus.com web site ("Site").
 <br><br>
 <b>Collection and Use of Personal Information by MustHaveMenus.com
-</b><br><br>With your consent, we collect information that personally identifies you or allows us to contact you when you register to use the Site. Such information may include your name, e-mail address, user identification password and other information (collectively "Personal Information"). You may also provide us with Personal Information in the process of submitting questions and answers while interacting with other members of the Site.  MustHaveMenus.com uses your Personal Information to operate the Site, to effect your transactions initiated at the Site; to create and share reports about your transactions among themselves. You may correct or update your Personal Information by sending e-mail to <a href="mailto:service@MustHaveMenus.com">service@MustHaveMenus.com</a>.
+</b><br><br>With your consent, we collect information that personally identifies you or allows us to contact you when you register to use the Site. Such information may include your name, e-mail address, user identification password and other information (collectively "Personal Information"). You may also provide us with Personal Information in the process of submitting questions and answers while interacting with other members of the Site.  MustHaveMenus.com uses your Personal Information to operate the Site, to effect your transactions initiated at the Site; to create and share reports about your transactions among themselves. You may correct or update your Personal Information by sending e-mail to <a href="mailto:Contact@MustHaveMenus.com">Contact@MustHaveMenus.com</a>.
 
 <b><br><br>Cookies
 </b><br><br> You must have Cookies turned ON to be a member at MustHaveMenus.com. Cookies are very small text files placed on your hard drive by a computer server. It serves as your identification card and is uniquely yours. A cookie can only be read by the server that gave it to you. Cookies tell us that you returned to a specific Web page on our Site, and help us track your preferences. Cookies enables you to login, and helps us personalize your experience at the Site by permitting our computer server to "remember" who you are. Some of the advertisers on the Site use cookies to collect similar information, but we do not control the use of cookies by other web site operators or advertisers.
 
 <b><br><br>Personal Information Used for Promotional Purposes
-</b><br><br>We may send you information from time to time about MustHaveMenus.com promotional offerings. However, we will not share your Personal Information with any third party without your prior consent. Your consent to receipt of promotional offerings may be indicated in the appropriate check boxes within the Site signifying your preferences. You may be entitled to stop the delivery of promotional information from MustHaveMenus.com by using the UNSUBSCRIBE link provided in all marketing emails, or by sending e-mail to <a href="mailto:service@MustHaveMenus.com">service@MustHaveMenus.com</a> and, for third party promotional offerings, by contacting the source of that promotional offering.
+</b><br><br>We may send you information from time to time about MustHaveMenus.com promotional offerings. However, we will not share your Personal Information with any third party without your prior consent. Your consent to receipt of promotional offerings may be indicated in the appropriate check boxes within the Site signifying your preferences. You may be entitled to stop the delivery of promotional information from MustHaveMenus.com by using the UNSUBSCRIBE link provided in all marketing emails, or by sending e-mail to <a href="mailto:Contact@MustHaveMenus.com">Contact@MustHaveMenus.com</a> and, for third party promotional offerings, by contacting the source of that promotional offering.
 
 <b><br><br>Children's Privacy</b>
 <br><br>Children under the age of 13 are not allowed to purchase products on the Site. MustHaveMenus.com does not knowingly collect Personal Information about child under the age of 13 or allow them to place orders on the Site. If MustHaveMenus.com learns that a child under the age of 13 is placing orders on the Site, MustHaveMenus.com will close the child's account and delete all information collected about the child.  Notwithstanding the foregoing, MustHaveMenus.com may choose to retain the child's e-mail address as a means to prevent the child from re-registering with MustHaveMenus.com.
@@ -165,7 +167,7 @@ MustHaveMenus.com values your privacy. You may contact us any time to learn more
 </b><br><br>MustHaveMenus.com may make changes to this Privacy Statement from time to time. We will post changes to our privacy statement here, so be sure to check back periodically. We may also notify you of significant changes by e-mail or in other ways.
 
 <b><br><br>Questions, Comments, Concerns
-</b><br><br>If you have any questions or comments about our use of Personal Information, please contact us at <a href="mailto:service@MustHaveMenus.com">service@MustHaveMenus.com</a>. We will use reasonable efforts to promptly investigate any complaint you may have regarding our use of Personal Information.
+</b><br><br>If you have any questions or comments about our use of Personal Information, please contact us at <a href="mailto:Contact@MustHaveMenus.com">Contact@MustHaveMenus.com</a>. We will use reasonable efforts to promptly investigate any complaint you may have regarding our use of Personal Information.
 <br><br>
 
 
@@ -185,9 +187,7 @@ MustHaveMenus.com values your privacy. You may contact us any time to learn more
 	
 <div style="margin:20px 0;">
 
-<b>Billing and Site Questions:</b> <a href="mailto:billing@MustHaveMenus.com">billing@MustHaveMenus.com</a><br>
-<br>
-<b>All Suggestions:</b> <a href="mailto:suggestions@MustHaveMenus.com">suggestions@MustHaveMenus.com</a><br>
+<b>All Suggestions, Billing and Site Questions:</b> <a href="mailto:contact@MustHaveMenus.com">Contact@MustHaveMenus.com</a><br>
 <br>
 <b>MustHaveMenus</b><br>
 Letters and Arts, Inc.<br>
@@ -215,7 +215,7 @@ Ashland, Oregon 97520<br><br>
 <div id="footer">
 
 <div style="float:right;padding:10px 20px 0 20px;">
-<h3><a href="http://www.musthavemenus.com" target="_self">www.musthavemenus.com</a> | <a href="/menu/usagePolicy/view.do" rel="nofollow">Terms of Use</a> | <a href="/menu/privacyPolicy/view.do" rel="nofollow">Privacy Policy</a> | <a href="/menu/about/view.do" rel="nofollow">About Us</a> | <a href="/menu/contact.do" rel="nofollow">Contact</a> | <a href="/menu/faq/view.do" rel="nofollow">Help</a> | <a href="/menu/sitemap.do" rel="nofollow">Sitemap</a></h3>
+<h3><a href="http://www.musthavemenus.com" target="_self">www.musthavemenus.com</a> | <a href="http://www.musthavemenus.com/menu/usagePolicy/view.do" rel="nofollow">Terms of Use</a> | <a href="http://www.musthavemenus.com/menu/privacyPolicy/view.do" rel="nofollow">Privacy Policy</a> | <a href="http://www.musthavemenus.com/menu/about/view.do" rel="nofollow">About Us</a> | <a href="http://www.musthavemenus.com/menu/contact.do" rel="nofollow">Contact</a> | <a href="http://www.musthavemenus.com/menu/faq/view.do" rel="nofollow">Help</a> | <a href="http://www.musthavemenus.com/menu/sitemap.do" rel="nofollow">Sitemap</a></h3>
 </div>
 
 <div style="float:left;padding:10px 10px 0 20px;">
