--- a/w/wo/wou/wouldyouhitthis.com.html
+++ b/w/wo/wou/wouldyouhitthis.com.html
@@ -1,7 +1,9 @@
-<!--The following is the downloaded HTML source of the wouldyouhitthis.com privacy policy that was archived on 2007-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230052335id_/http%3A//wouldyouhitthis.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wouldyouhitthis.com privacy policy that was archived on 2008-02-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080217045621id_/http%3A//www.wouldyouhitthis.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+<script language="JavaScript" src=" http://www.wouldyouhitthis.com/flashcoms/common/js/flashcoms.js"></script>
+
 <!--google_ad_section_start--><title>WouldYouHitThis? Privacy Policy</title>
 <!--google_ad_section_end--><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="style.css" rel="stylesheet" type="text/css">
@@ -77,15 +79,28 @@
 		}
 	}
 </script>
+<style type="text/css">
+<!--
+.style1 {font-size: 9px}
+-->
+</style>
 </head>
 <body class="page-body" id="/privacy.php">
+<!--
+<table width="726"  border="0" align="center" cellpadding="0" cellspacing="0" class="container">
+<tr><td width="3" background="images/main_border_left.gif"><img src="images/spacer.gif" width="3" /></td><td align="center" bgcolor="#FFFFCC">
+	<span class="style1"> 
+    <strong> We are currently having problems, sorry </strong>
+    </span>  
+</td><td width="3" background="images/main_border_right.gif"><img src="images/spacer.gif" width="3" /></td></tr></table>
+--->
 <table width="726" height="100%" border="0" align="center" cellpadding="0" cellspacing="0" class="container">
   <tbody><tr> 
     <td width="3" background="images/main_border_left.gif"><img src="images/spacer.gif" width="3"></td>
     <td width="136" valign="top">
 	<a href="index.php"><img src="images/header_logo.gif" width="132" height="60" class="header-logo" style="margin-top:4px;" border="0">	</a>
-	  <div class="header-bar" align="center"><a href="online.php" class="usersonline"><strong><script language="JavaScript" src="http://b.wouldyouhitthis.com/static/online.html"></script></strong> users online</a></div><div class="box-left" id="newsupdate"> 
-<strong><a href="forums.php?tid=23769">Want to win an iPod? Or brand new webcam? Read more...</a></strong></div>
+	  <div class="header-bar" align="center"><a href="online.php" class="usersonline"><strong>1056</strong> users online</a></div><div class="box-left" id="newsupdate"> 
+</div>
 <script language="javascript">
                   function showPword (p) {
                     document.write(p+'a'+'ssw'+'o'+'rd');
@@ -95,7 +110,7 @@
 	<form action="/privacy.php?" method="post" name="login">
   	<div class="terms">Username:</div><input type="text" name="emailadd" class="login">
   	<div class="terms"><script language="javascript">showPword('P');</script>Password:</div><input type="password" name="password" class="login">
-		<input type="hidden" name="logh" value="526f48c5625c5ddb7b789210d991fed9">
+		<input type="hidden" name="logh" value="bdda6cdcc48303ff3ba15d1fcc9948e6">
   	<input type="submit" name="submit" value="Login!" class="login" id="button">
 	</form>
 <!-- google_ad_section_end -->	<a href="submit.php" class="menu"><strong>Not a member?</strong><br><br>No problem! Joining is quick, easy, and most importantly <strong><em>FREE!</em></strong><br><br>Just click here to begin!</a>
@@ -106,7 +121,10 @@
     <td width="11">&nbsp;</td>
     <td valign="top" style="padding-top:4px;">
 	       <div class="header-bar"><a href="index.php"><img src="images/menu/start_unsel.gif" width="7" height="18" border="0/"><img src="images/menu/rate.gif" width="33" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="top10.php"><img src="images/menu/top10.gif" width="37" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="new.php"><img src="images/menu/newest.gif" width="47" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="history.php"><img src="images/menu/history.gif" width="47" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="forums.php"><img src="images/menu/forums.gif" width="47" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="javascript:launchChat();"><img src="images/menu/chat.gif" width="30" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="groups.php"><img src="images/menu/groups.gif" width="45" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="pony.php"><img src="images/menu/pony.gif" width="33" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="search.php"><img src="images/menu/search.gif" width="45" height="18" border="0"></a><img src="images/menu/end_unsel.gif" width="18" height="18" border="0"></div>
-	 <!--hi--><!--hey--><iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="NO" width="468" height="60" src="funpics/46.php"></iframe><div class="box-fullcenter">
+	 <center><!-- BEGIN TAG - 468x60 - www.wouldyouhitthis.com - DO NOT MODIFY -->
+<script type="text/javascript" src="http://optimizedby.rmxads.com/st?ad_type=ad&amp;ad_size=468x60&amp;section=284807"></script>
+<!-- END TAG --></center>
+<div class="box-fullcenter">
 <h6>Privacy Policy</h6>
 <br><div class="terms">Privacy Policy for WouldYouHitThis.com:<br>
 <br>
@@ -154,7 +172,7 @@ Contacting the Web Site:<br>
 <br>
 If you have any questions about this privacy statement, the practices of this site, or your dealings with this Web site, you can contact: <br>
 <br>
-webmaster@wouldyouhitthis.com</div>
+support@wouldyouhitthis.com</div>
 </div>
 		
     </td>
@@ -168,21 +186,22 @@ webmaster@wouldyouhitthis.com</div>
     <td width="3" height="3" background="images/main_corner_right.gif"></td>
   </tr>
 </tbody></table>
-<div class="terms">©2007 WouldYouHitThis.com - <a class="terms" href="privacy.php">Privacy Policy</a> - <a class="terms" href="tos.php">Terms of Service</a></div>
+<div class="terms">©2008 <a href="#" target="_blank" class="terms">ONEDown Networks Inc.</a> <br> PO BOX 2626, LIVERMORE CA 94550 <br>
+ <a class="terms" href="http://www.wouldyouhitthis.com/support">Support / Info</a> - <a class="terms" href="privacy.php">Privacy Policy</a> - <a class="terms" href="tos.php">Terms of Service</a></div>
 
 <div class="terms">Member links:
 	<a class="terms" href="index.php">Online Dating</a> - 	<a class="terms" href="stats.php">Stats</a> - <a class="terms" href="matches.php">Matches</a> - <a class="terms" href="picmanager.php">Video and Picture Sharing</a> - 
 	<a class="terms" href="messages.php">Messages</a> - <a class="terms" href="friends.php">Friends</a> - 
 	<a class="terms" href="myponies.php">Pony Bets</a> - <a class="terms" href="couples.php">Couple</a>
 </div>
-<!-- Start Quantcast tag -->
-<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
 <script type="text/javascript">
-_qacct="p-80KpfAFSBzXS2";quantserve();</script>
-<noscript>
-<img src="http://pixel.quantserve.com/pixel/p-80KpfAFSBzXS2.gif" style="display: none" height="1" width="1" alt="Quantcast"/></noscript>
-<!-- End Quantcast tag -->
-  
+_uacct = "UA-3449187-1";
+urchinTracker();
+</script>
+
 
 
 </body></html>
