--- a/i/ib/ibp/ibps.com.html
+++ b/i/ib/ibp/ibps.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ibps.com privacy policy that was archived on 2007-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071213214400id_/http%3A//www.ibps.com/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ibps.com privacy policy that was archived on 2008-02-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080219112127id_/http%3A//ibps.com/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>Kalahare - Privacy Policy</title>
@@ -180,7 +180,7 @@
 </ul>
 
 <p>
-	© 2007 Kalahare, LLC. All rights reserved.
+	© 2008 Kalahare, LLC. All rights reserved.
 </p>
 		</div>
 
