--- a/i/i-/i-e/i-escape.com.html
+++ b/i/i-/i-e/i-escape.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the i-escape.com privacy policy that was archived on 2007-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071210213447id_/http%3A//www.i-escape.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the i-escape.com privacy policy that was archived on 2008-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080220184050id_/http%3A//www.i-escape.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>i-escape.com</title>
@@ -152,6 +152,7 @@ We are registered with the Data Protection Registrar and operate in accordance w
 <option value="India: North">India: North</option>
 <option value="Ireland">Ireland</option>
 <option value="Italy">Italy</option>
+<option value="Laos">Laos</option>
 <option value="Malaysia">Malaysia</option>
 <option value="Maldives">Maldives</option>
 <option value="Mexico">Mexico</option>
@@ -175,8 +176,10 @@ We are registered with the Data Protection Registrar and operate in accordance w
 <option value="Tanzania">Tanzania</option>
 <option value="Thailand">Thailand</option>
 <option value="Tunisia">Tunisia</option>
+<option value="Turkey">Turkey</option>
 <option value="United Kingdom">United Kingdom</option>
 <option value="Uruguay">Uruguay</option>
+<option value="Vietnam">Vietnam</option>
 <option value="Zanzibar">Zanzibar</option>
         </select>
         </font></td>
@@ -289,7 +292,7 @@ d.getSeconds());
  
 wtl_Tag5_109057();
 //-->
-</script><img id="WTL_109057" border="0" width="1" height="1" src="https://statse.webtrendslive.com/S005-01-10-10-284211-109057/button5.asp?tagver=5&amp;si=109057&amp;fw=1&amp;server=&amp;Group=&amp;tz=0&amp;ch=22&amp;cl=K1VMLH7&amp;ti=i-escape.com&amp;url=https%3A//web.archive.org/web/20071210213447id_/http%253A//www.i-escape.com/privacy_policy.php&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No">
+</script><img id="WTL_109057" border="0" width="1" height="1" src="https://statse.webtrendslive.com/S005-01-10-10-284211-109057/button5.asp?tagver=5&amp;si=109057&amp;fw=1&amp;server=&amp;Group=&amp;tz=0&amp;ch=22&amp;cl=K1VMLF7&amp;ti=i-escape.com&amp;url=https%3A//web.archive.org/web/20080220184050id_/http%253A//www.i-escape.com/privacy_policy.php&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No">
 <noscript>
 <IMG BORDER="0" WIDTH="1" HEIGHT="1" SRC="http://statse.webtrendslive.com/S005-01-10-10-284211-109057/button5.asp?tagver=5&si=109057&fw=1&js=No&">
 </noscript>
@@ -313,7 +316,7 @@ screen.colorDepth+'&rs='+escape(screen.width+ ' x '+screen.height)+
 '&tz='+ntz.getTimezoneOffset()+'&je='+ navigator.javaEnabled()};
 document.write('<img border=0 hspace=0 '+
  'vspace=0 width=1 height=1 src="'+nhp+'://counter2.hitslink.com/'+
- 'statistics.asp?v=1&s=212&acct=inkltd'+data+'">');</script><img border="0" hspace="0" vspace="0" width="1" height="1" src="https://counter2.hitslink.com/statistics.asp?v=1&amp;s=212&amp;acct=inkltd&amp;an=Netscape&amp;ck=17&amp;rf=&amp;sl=undefined&amp;av=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;l=en-US&amp;pf=Linux%20x86_64&amp;pg=/web/20071210213447id_/http%253A//www.i-escape.com/privacy_policy.php&amp;cd=24&amp;rs=800%20x%20600&amp;tz=0&amp;je=false">
+ 'statistics.asp?v=1&s=212&acct=inkltd'+data+'">');</script><img border="0" hspace="0" vspace="0" width="1" height="1" src="https://counter2.hitslink.com/statistics.asp?v=1&amp;s=212&amp;acct=inkltd&amp;an=Netscape&amp;ck=17&amp;rf=&amp;sl=undefined&amp;av=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;l=en-US&amp;pf=Linux%20x86_64&amp;pg=/web/20080220184050id_/http%253A//www.i-escape.com/privacy_policy.php&amp;cd=24&amp;rs=800%20x%20600&amp;tz=0&amp;je=false">
 <noscript>
 <img border=0 hspace=0 vspace=0 width=1 height=1 alt="" 
 src="http://counter2.hitslink.com/stats-ns.asp?acct=inkltd&amp;v=1&amp;s=212">
