--- a/s/su/sur/surepayroll.com.html
+++ b/s/su/sur/surepayroll.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the surepayroll.com privacy policy that was archived on 2007-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230093946id_/http%3A//www.surepayroll.com/SecurityCenter/BcrhWare/default.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the surepayroll.com privacy policy that was archived on 2008-02-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080221171539id_/http%3A//www.surepayroll.com/SecurityCenter/BcrhWare/default.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Payroll - Payroll on the Web - Internet Payroll - SurePayroll - Security Center</title>
@@ -24,18 +24,18 @@ online, deduction">
 		
 <table width="750" height="104" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td width="407" align="left" valign="top"><a href="/default.asp"><img src="/spsite/navigation/images/hg_splogo.gif" width="407" height="104" border="0"></a></td>
+    <td width="407" align="left" valign="top"><a href="/default.asp" title="SurePayroll Payroll Services"><img src="/spsite/navigation/images/hg_splogo.gif" width="407" height="104" border="0"></a></td>
     <td width="343" height="67" align="left" valign="top">
       <table width="343" height="104" border="0" cellpadding="0" cellspacing="0">
         <tbody><tr>
-          <td width="197" height="39" align="left" valign="top"><a href="/enroll/StartAccount.asp"><img src="/spsite/navigation/images/hgToolbar_enroll.gif" width="197" height="39" border="0"></a></td>
-          <td width="146" height="104" rowspan="3" align="left" valign="top"><a href="/login/login.asp"><img src="/spsite/navigation/images/hgToolbar_login.gif" width="146" height="104" border="0"></a></td>
+          <td width="197" height="39" align="left" valign="top"><a href="/enroll/StartAccount.asp" title="Run Payroll"><img src="/spsite/navigation/images/hgToolbar_enroll.gif" width="197" height="39" border="0"></a></td>
+          <td width="146" height="104" rowspan="3" align="left" valign="top"><a href="/login/login.asp" rel="nofollow"><img src="/spsite/navigation/images/hgToolbar_login.gif" width="146" height="104" border="0"></a></td>
         </tr>
         <tr>
-          <td width="197" height="30" align="left" valign="top"><a href="/quote/instant_price_quote.asp"><img src="/spsite/navigation/images/hgToolbar_freequote.gif" width="197" height="30" border="0"></a></td>
+          <td width="197" height="30" align="left" valign="top"><a href="/quote/instant_price_quote.asp" title="Payroll Quote"><img src="/spsite/navigation/images/hgToolbar_freequote.gif" width="197" height="30" border="0"></a></td>
         </tr>
         <tr>
-          <td width="197" height="35" align="left" valign="top"><a href="/contactus/default.asp"><img src="/spsite/navigation/images/hgToolbar_contact.gif" width="197" height="35" border="0"></a></td>
+          <td width="197" height="35" align="left" valign="top"><a href="/contactus/default.asp" rel="nofollow"><img src="/spsite/navigation/images/hgToolbar_contact.gif" width="197" height="35" border="0"></a></td>
         </tr>
       </tbody></table></td>
   </tr>
@@ -44,7 +44,7 @@ online, deduction">
 <img src="/images/spsite/lineCCCCCC.gif" width="750" height="1" border="0">
 
 <!-- SiteCatalyst code version: H.10. -->
-<script language="JavaScript" src="/include/s_code.js"></script><img name="s_i_j2globalonebox" height="1" width="1" border="0" alt="" src="https://j2global.122.2o7.net/b/ss/j2globalonebox/1/H.9-pdv-2/s34684012907607?[AQB]&amp;ndh=1&amp;t=30/0/2020%2017%3A5%3A21%204%200&amp;ce=ISO-8859-1&amp;ns=j2global&amp;pageName=SecurityCenter%20-%20Security%20Center%20HP&amp;g=https%3A//web.archive.org/web/20071230093946id_/http%253A//www.surepayroll.com/SecurityCenter/BcrhWare/default.asp&amp;cc=USD&amp;ch=SecurityCenter&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+<script language="JavaScript" src="/include/s_code.js"></script><img name="s_i_j2globalonebox" height="1" width="1" border="0" alt="" src="https://j2global.122.2o7.net/b/ss/j2globalonebox/1/H.9-pdv-2/s33930741036492?[AQB]&amp;ndh=1&amp;t=30/0/2020%2017%3A5%3A20%204%200&amp;ce=ISO-8859-1&amp;ns=j2global&amp;pageName=SecurityCenter%20-%20Security%20Center%20HP&amp;g=https%3A//web.archive.org/web/20080221171539id_/http%253A//www.surepayroll.com/SecurityCenter/BcrhWare/default.asp&amp;cc=USD&amp;ch=SecurityCenter&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
 <script language="JavaScript"><!--
 /* You may give each page an identifying name, server, and channel on
 the next lines. */
@@ -253,44 +253,25 @@ Sign up for our free newsletter to <a href="/newsletter/payrollIQ/" title="Incre
 		</div></td>
 	</tr>
 </tbody></table>
-<table border="0" cellpadding="0" width="750" cellspacing="0">
-	<tbody><tr>
-		
-		<td width="150" valign="top" align="left"></td>
-		
-		<td width="600" valign="top">
-			<table width="600" border="0" cellspacing="0" cellpadding="0">
-				<tbody><tr>
-					<td width="10" align="center" valign="middle"><img src="/images/spacer_clear.gif" width="10" height="1"></td>
-					<td width="590" align="left" valign="top">
-						<table width="590" border="0" cellpadding="0" cellspacing="0">
-						<tbody><tr>
-						<td bgcolor="white" align="left" valign="middle" width="590" height="32">
-							<a href="/spsite/service/faq.asp">FAQ</a> | <a href="/SecurityCenter/BcrhWare/default.asp">Privacy &amp; Security</a> | <a href="/contactus/default.asp">Contact Us</a> | <a href="/online-payroll/">Site Map</a> | <a href="/login/login.asp">Login</a></td>
-							<td valign="top">
-								<table width="135" border="0" cellpadding="2" cellspacing="0">
-								<tbody><tr>
-								<td width="135" align="center" valign="top"><script src="https://seal.verisign.com/getseal?host_name=www.surepayroll.com&amp;size=S&amp;use_flash=NO&amp;use_transparent=NO&amp;lang=en"></script><br>
-								<a href="http://www.verisign.com/ssl/ssl-information-center/" target="_blank" style="color:#000000; text-decoration:none; font:bold 7px verdana,sans-serif; letter-spacing:.5px; text-align:center; margin:0px; padding:0px;">ABOUT SSL CERTIFICATES</a></td>
-								</tr>
-								</tbody></table>
-							</td>
-							<td bgcolor="white" valign="top"><a href="http://www.bbbonline.org/cks.asp?id=101021213483514811" target="_blank">
-							<img src="/images/ReliabilitySeal.gif" border="0" width="90" height="34"></a>&nbsp;&nbsp;</td>
-						</tr>
-						<tr>
-						<td colspan="4" align="left" width="590"><img src="/images/spsite/lineCCCCCC.gif" width="590" height="1"><br>
-						 <br>SurePayroll - Online Payroll Service - Small Business Payroll offering <a href="/product/payroll/" title="Payroll">Payroll</a>, <a href="/product/401k/" title="401k">401k</a> and <a href="/product/compliance/" title="Poster Compliance">Poster Compliance</a>&nbsp;&nbsp;<br>
-						©2007 SurePayroll © All Rights Reserved&nbsp;&nbsp;</td>
-						</tr>
-			</tbody></table>
-		</td>
-	</tr>
-</tbody></table>
+<div id="footerBlockLeft">
+	<a href="/spsite/service/faq.asp" rel="nofollow">FAQ</a> | <a href="/SecurityCenter/BcrhWare/default.asp" rel="nofollow">Privacy &amp; Security</a> | <a href="/contactus/default.asp" rel="nofollow">Contact Us</a> | <a href="/online-payroll/">Site Map</a> | <a href="/login/login.asp" rel="nofollow">Login</a><!-- <a href="http://www.verisign.com/ssl/ssl-information-center/" target="_blank"  style="color:#000000; text-decoration:none; font:bold 10px verdana,sans-serif; letter-spacing:.5px; text-align:center; margin:0px; padding:0px;" rel="nofollow">ABOUT SSL CERTIFICATES</a> -->
+	<br>
+	<br>
+	Online Payroll Service - Small Business Payroll offering <a href="/product/payroll/" title="Payroll">Payroll</a>, <a href="/product/401k/" title="401k">401k</a> and <a href="/product/compliance/" title="Poster Compliance">Poster Compliance</a>&nbsp;&nbsp;<br>
+	©2008 SurePayroll © All Rights Reserved&nbsp;&nbsp;
+</div>
+
+<div id="footerBlockRight">
+	<script src="https://seal.verisign.com/getseal?host_name=www.surepayroll.com&amp;size=S&amp;use_flash=NO&amp;use_transparent=NO&amp;lang=en"></script>&nbsp;&nbsp;<a target="_blank" href="http://www.bbbonline.org/cks.asp?id=101021213483514811" rel="nofollow"><img src="/images/ReliabilitySeal.gif" border="0" title="Click to verify BBB accreditation and to see a BBB report." alt="Click to verify BBB accreditation and to see a BBB report." oncontextmenu="alert('Use without permission is prohibited. The BBB Accreditation seal is a trademark of the Council of Better Business Bureaus, Inc.'); return false;"></a><br>
+</div>
 
 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
+
+
+	
+
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 _uacct = "UA-610453-1";
@@ -298,4 +279,4 @@ urchinTracker();
 </script>
 
 
-</td></tr></tbody></table></body></html>
+</body></html>
