podclass.com (archived on 2008-02-23)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 11375,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.66,
  "homepage_snapshot_redirected_domain": "podclass.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080309180004id_/http://www.podclass.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080309180004id_/http%3A//podclass.com",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "podclass.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080223155432id_/http%3A//www.podclass.com/podclass/privacy",
  "policy_title": "Privacy Policy",
  "policy_url": "podclass.com/podclass/privacy",
  "sha1": "9318bfd5131ff4b38362b0d58198d832521ac8c6",
  "simhash": 5749150327205636679,
  "simhash_updated": false,
  "site_hostname": "podclass.com",
  "site_url": "http://podclass.com",
  "smog": 15.02,
  "strict_updated": false,
  "timestamp": "20080223155432",
  "word_count": 1843,
  "year": 2008
}

--- a/p/po/pod/podclass.com.html
+++ b/p/po/pod/podclass.com.html
@@ -1,24 +1,33 @@
-<!--The following is the downloaded HTML source of the podclass.com privacy policy that was archived on 2007-10-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071014013616id_/http%3A//www.podclass.com/podclass/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the podclass.com privacy policy that was archived on 2008-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080223155432id_/http%3A//www.podclass.com/podclass/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html dir="ltr" lang="en" xml:lang="en"><head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en" xml:lang="en"><head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <link rel="stylesheet" type="text/css" href="http://www.podclass.com/theme/standard/styles.php">
 <link rel="stylesheet" type="text/css" href="http://www.podclass.com/theme/podclass/styles.php">
+
+<!--[if IE 7]>
+    <link rel="stylesheet" type="text/css" href="http://www.podclass.com/theme/standard/styles_ie7.css" />
+<![endif]-->
+<!--[if IE 6]>
+    <link rel="stylesheet" type="text/css" href="http://www.podclass.com/theme/standard/styles_ie6.css" />
+<![endif]-->
+
 
     <meta name="keywords" content="podclass, Privacy Policy ">
     <title>Privacy Policy</title>
     <script language="javascript" type="text/javascript" src="http://www.podclass.com/lib/flash_flv_player/swfobject.js"></script>
     <!--<style type="text/css">/*<![CDATA[*/ body{behavior:url(http://www.podclass.com/lib/csshover.htc);} /*]]>*/</style>-->
 
-<script language="JavaScript" type="text/javascript" src="http://www.podclass.com/lib/javascript-static.js"></script>
-<script language="JavaScript" type="text/javascript" src="http://www.podclass.com/lib/javascript-mod.php"></script>
-<script language="JavaScript" type="text/javascript" src="http://www.podclass.com/lib/overlib.js"></script>
-<script language="JavaScript" type="text/javascript" src="http://www.podclass.com/lib/cookies.js"></script>
+<script type="text/javascript" src="http://www.podclass.com/lib/javascript-static.js"></script>
+<script type="text/javascript" src="http://www.podclass.com/lib/javascript-mod.php"></script>
+<script type="text/javascript" src="http://www.podclass.com/lib/overlib.js"></script>
+<script type="text/javascript" src="http://www.podclass.com/lib/cookies.js"></script>
+<script type="text/javascript" src="http://www.podclass.com/lib/ufo.js"></script>
 
-<script language="JavaScript" type="text/javascript" defer="defer">
+<script type="text/javascript" defer="defer">
 
-<!-- // Non-Static Javascript functions
+//<![CDATA[
 
 setTimeout('fix_column_widths()', 20);
 
@@ -36,15 +45,17 @@ function openpopup(url,name,options,fullscreen) {
 function uncheckall() {
   void(d=document);
   void(el=d.getElementsByTagName('INPUT'));
-  for(i=0;i<el.length;i++)
-    void(el[i].checked=0)
+  for(i=0;i<el.length;i++) {
+    void(el[i].checked=0);
+  }
 }
 
 function checkall() {
   void(d=document);
   void(el=d.getElementsByTagName('INPUT'));
-  for(i=0;i<el.length;i++)
-    void(el[i].checked=1)
+  for(i=0;i<el.length;i++) {
+    void(el[i].checked=1);
+  }
 }
 
 function inserttext(text) {
@@ -58,12 +69,11 @@ function inserttext(text) {
   opener.document.forms['theform'].message.focus();
 }
 
-
-// done hiding -->
+//]]>
 </script>
 </head>
 
-<body class="podclass-privacy course-1" id="podclass-privacy-index">
+<body class="podclass-privacy course-1 nocoursepage notloggedin lang-en_utf8" id="podclass-privacy-index">
 
 <div id="podclass">
 
@@ -73,7 +83,7 @@ function inserttext(text) {
 	
 	<table border="0" cellspacing="0" cellpadding="0" id="header">
   <tbody><tr>    <td class="headermain">&nbsp;</td>
-		<td id="headerglobal"><strong><a target="_top" href="https://www.podclass.com/login/signup.php">Sign Up</a></strong>|<a target="_top" href="http://www.podclass.com/podclass/help/index.php">Help</a>|<a target="_top" href="http://www.podclass.com/login/">Log in</a></td>
+		<td id="headerglobal"><strong><a target="_top" href="https://www.podclass.com/login/signup.php">Sign Up</a></strong>|<a target="_top" href="http://www.podclass.com/podclass/help/index.php">Help</a>|<a target="_top" href="https://www.podclass.com/podclass/login/login.php">Log in</a></td>
   </tr>
 </tbody></table>
 <table border="0" cellspacing="0" cellpadding="0" id="logo">
@@ -83,7 +93,7 @@ function inserttext(text) {
 </tbody></table>
 </div>
 <div class="headersearch">
-	<form name="headersearch" action="http://www.podclass.com/podclass/course/search.php" method="get">
+        <form name="headersearch" action="http://www.podclass.com/podclass/course/search.php" method="get">
                     <input class="headersearchbox" size="30" type="text" name="search" value="Start new search" onclick="var searchtext = document.forms['headersearch'].elements['search']; if(searchtext.value == 'Start new search') { searchtext.value = ''; }">
 
                     <input class="headersearch_button" type="submit" value="Search">
@@ -178,7 +188,8 @@ function inserttext(text) {
 <p>From time to time Podclass may make changes to this Privacy Policy.  If Podclass makes changes, Podclass will post them on the site to make you aware of what the changes are so you will always be aware of what information we collect, how we use it, and when we may disclose it. You are bound by any minor changes to the policy when you use the site after those changes have been posted.   If, however, Podclass is going to use your personally identifiable information in a manner materially different from that stated at the time of collection we will notify you by posting a notice on Podclass.com for thirty (30) days.</p> 
 
 <p><b><u>Contacting Podclass</u></b></p>
-<p>If you have any questions about this Privacy Policy, the practices of Podclass, or your dealings with Podclass.com, please contact us at privacy@podclass.com.</p></td></tr></tbody></table></div> <!-- end div containerContent -->
+<p>If you have any questions about this Privacy Policy, the practices of Podclass, or your dealings with Podclass.com, please contact us at privacy@podclass.com.</p>
+</td></tr></tbody></table></div> <!-- end div containerContent -->
 <!-- START OF FOOTER -->
 <div id="footer">
 
