--- a/i/in/ins/instra.com.html
+++ b/i/in/ins/instra.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the instra.com privacy policy that was archived on 2007-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071225113713id_/http%3A//instra.com/policies/DDPrivacyPolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the instra.com privacy policy that was archived on 2008-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080223232833id_/http%3A//www.instra.com/policies/DDPrivacyPolicy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
