televisionwithoutpity.com (archived on 2008-02-24)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 18254,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.3,
  "homepage_snapshot_redirected_domain": "televisionwithoutpity.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080331000557id_/http://www.televisionwithoutpity.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080331000557id_/http%3A//televisionwithoutpity.com",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "televisionwithoutpity.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080224034012id_/http%3A//www.televisionwithoutpity.com/portal/site/TelevisionWithoutPity/PrivacyPolicy",
  "policy_title": "Television Without Pity >> Privacy Policy",
  "policy_url": "televisionwithoutpity.com/portal/site/TelevisionWithoutPity/PrivacyPolicy",
  "sha1": "1ad8b10df90b301ba9115e7ed43fe979f8beeab2",
  "simhash": 939762028684503108,
  "simhash_updated": false,
  "site_hostname": "televisionwithoutpity.com",
  "site_url": "http://televisionwithoutpity.com",
  "smog": 16.16,
  "strict_updated": false,
  "timestamp": "20080224034012",
  "word_count": 2992,
  "year": 2008
}

--- a/t/te/tel/televisionwithoutpity.com.html
+++ b/t/te/tel/televisionwithoutpity.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the televisionwithoutpity.com privacy policy that was archived on 2007-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230085506id_/http%3A//www.televisionwithoutpity.com/portal/site/TelevisionWithoutPity/PrivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the televisionwithoutpity.com privacy policy that was archived on 2008-02-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080224034012id_/http%3A//www.televisionwithoutpity.com/portal/site/TelevisionWithoutPity/PrivacyPolicy) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head></head><body><page:hide-template-menu-items>
 <!-- Vignette Portal 7.3 (build 519537) (JAR build 1) -->
@@ -50,12 +50,16 @@ menueItems["Privacy Policy"]="/portal/site/TelevisionWithoutPity/PrivacyPolicy/"
 
 menueItems["HTML_Page_Display"]="/portal/site/TelevisionWithoutPity/menuitem.0497c5a359254e79c219117c973c2d04/";
 
+menueItems["Header"]="/portal/site/TelevisionWithoutPity/Header/";
+
+menueItems["Footer"]="/portal/site/TelevisionWithoutPity/Footer/";
+
 </script>
 <base target="_top">
 
 
 <div id="pageContainer" align="center">
-<iframe src="http://fls.doubleclick.net/activityi;src=1455539;type=bravo844;cat=telev142;ord=1;num=989157682971.2356?" width="1" height="1" frameborder="0"></iframe><noscript>
+<iframe src="http://fls.doubleclick.net/activityi;src=1455539;type=bravo844;cat=telev142;ord=1;num=8094732941098.943?" width="1" height="1" frameborder="0"></iframe><noscript>
     <IFRAME SRC="http://fls.doubleclick.net/activityi;src=1455539;type=bravo844;cat=telev142;ord=1;num=1?" WIDTH="1" HEIGHT="1" FRAMEBORDER="0"></IFRAME>
 </noscript><table cellpadding="0" cellspacing="0" border="0" width="980px">
 <!-- Start of DoubleClick Spotlight Tag: Please do not remove-->
@@ -96,8 +100,8 @@ menueItems["HTML_Page_Display"]="/portal/site/TelevisionWithoutPity/menuitem.049
 <script language="JavaScript" type="text/javascript">
 var ord=Math.random()*10000000000000000;
 
-document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj/nbcu.twop/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;network=tvn;sz=728x90;tagtype=js;dcopt=ist;pos=1;tile=1;ord=' + ord + '?" type="text/javascript"></scr'+'ipt>');
-</script><script language="JavaScript" src="http://ad.doubleclick.net/adj/nbcu.twop/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;network=tvn;sz=728x90;tagtype=js;dcopt=ist;pos=1;tile=1;ord=268952029435565.2?" type="text/javascript"></script><noscript><a href="http://ad.doubleclick.net/jump/nbcu.twop/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;network=tvn;sz=728x90;tagtype=js;dcopt=ist;pos=1;tile=1;ord=123456789?" target="_blank"><img src="http://ad.doubleclick.net/jump/nbcu.twop/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;network=tvn;sz=728x90;tagtype=js;dcopt=ist;pos=1;tile=1;ord=123456789?" width="728" height="90" border="0" alt=""></a></noscript>
+document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj/nbcu.twop/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;!category=noexpand;network=tvn;sz=728x90;tagtype=js;dcopt=ist;pos=1;tile=1;ord=' + ord + '?" type="text/javascript"></scr'+'ipt>');
+</script><script language="JavaScript" src="http://ad.doubleclick.net/adj/nbcu.twop/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;!category=noexpand;network=tvn;sz=728x90;tagtype=js;dcopt=ist;pos=1;tile=1;ord=1829008420835165.2?" type="text/javascript"></script><noscript><a href="http://ad.doubleclick.net/jump/nbcu.twop/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;!category=noexpand;network=tvn;sz=728x90;tagtype=js;dcopt=ist;pos=1;tile=1;ord=123456789?" target="_blank"><img src="http://ad.doubleclick.net/jump/nbcu.twop/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;!category=noexpand;network=tvn;sz=728x90;tagtype=js;dcopt=ist;pos=1;tile=1;ord=123456789?" width="728" height="90" border="0" alt=""></a></noscript>
 
 
  
@@ -170,6 +174,8 @@ function go(select){
  
 <option value="/Shows/American-Idol">American Idol</option>
  
+<option value="/Shows/The-Apprentice">Apprentice, The</option>
+ 
 <option value="/Shows/The-Bachelor">Bachelor, The</option>
  
 <option value="/Shows/Battlestar-Galactica">Battlestar Galactica</option>
@@ -182,6 +188,8 @@ function go(select){
  
 <option value="/Shows/Brothers-and-Sisters">Brothers and Sisters</option>
  
+<option value="/Shows/Cashmere-Mafia">Cashmere Mafia</option>
+ 
 <option value="/Shows/Chuck">Chuck</option>
  
 <option value="/Shows/Dancing-With-The-Stars">Dancing With The Stars</option>
@@ -191,6 +199,8 @@ function go(select){
 <option value="/Shows/Dexter">Dexter</option>
  
 <option value="/Shows/Dirty-Sexy-Money">Dirty Sexy Money</option>
+ 
+<option value="/Shows/Eli-Stone">Eli Stone</option>
  
 <option value="/Shows/Farscape">Farscape</option>
  
@@ -210,15 +220,23 @@ function go(select){
  
 <option value="/Shows/How-I-Met-Your-Mother">How I Met Your Mother</option>
  
+<option value="/Shows/Jericho">Jericho</option>
+ 
 <option value="/Shows/Kid-Nation">Kid Nation</option>
  
 <option value="/Shows/Kitchen-Nightmares">Kitchen Nightmares</option>
  
+<option value="/Shows/Law--Order">Law &amp; Order</option>
+ 
 <option value="/Shows/Law-and-Order-Special-Victims-Unit">Law &amp; Order: SVU</option>
+ 
+<option value="/Shows/Lipstick-Jungle">Lipstick Jungle</option>
  
 <option value="/Shows/Lost">Lost</option>
  
 <option value="/Shows/Mad-Men">Mad Men</option>
+ 
+<option value="/Shows/Make-Me-A-Supermodel">Make Me A Supermodel</option>
  
 <option value="/Shows/My-Name-Is-Earl">My Name Is Earl</option>
  
@@ -232,9 +250,11 @@ function go(select){
  
 <option value="/Shows/Pushing-Daisies">Pushing Daisies</option>
  
-<option value="/Shows/The-Real-World--Road-Rules-Challenge">RW RR Challenge, The</option>
+<option value="/Shows/The-Real-World-Road-Rules-Challenge">RW RR Challenge, The</option>
  
 <option value="/Shows/Reaper">Reaper</option>
+ 
+<option value="/Shows/Rock-of-Love">Rock of Love</option>
  
 <option value="/Shows/Samantha-Who">Samantha Who?</option>
  
@@ -247,6 +267,8 @@ function go(select){
 <option value="/Shows/Supernatural">Supernatural</option>
  
 <option value="/Shows/Survivor">Survivor</option>
+ 
+<option value="/Shows/Terminator-The-Sarah-Connor-Chronicles">Terminator</option>
  
 <option value="/Shows/Top-Chef">Top Chef</option>
  
@@ -279,6 +301,8 @@ function go(select){
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=611"> American Idol</option>
 
+<option value="http://forums.televisionwithoutpity.com/index.php?showforum=665"> Apprentice, The</option>
+
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=996"> Bachelor, The</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=745"> Battlestar Galactica</option>
@@ -291,6 +315,8 @@ function go(select){
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=907"> Brothers and Sisters</option>
 
+<option value="http://forums.televisionwithoutpity.com/index.php?showforum=1042"> Cashmere Mafia</option>
+
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=1008"> Chuck</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=924"> Dancing With The Stars</option>
@@ -300,6 +326,8 @@ function go(select){
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=966"> Dexter</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=974"> Dirty Sexy Money</option>
+
+<option value="http://forums.televisionwithoutpity.com/index.php?showforum=1051"> Eli Stone</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=836"> Farscape</option>
 
@@ -319,15 +347,23 @@ function go(select){
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=1000"> How I Met Your Mother</option>
 
+<option value="http://forums.televisionwithoutpity.com/index.php?showforum=886"> Jericho</option>
+
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=972"> Kid Nation</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=998"> Kitchen Nightmares</option>
 
-<option value="http://forums.televisionwithoutpity.com/index.php?showforum=762"> Law &amp; Order: SVU</option>
+<option value="http://forums.televisionwithoutpity.com/index.php?showforum=1041"> Law &amp; Order</option>
+
+<option value="http://forums.televisionwithoutpity.com/index.php?showforum=1004"> Law &amp; Order: SVU</option>
+
+<option value="http://forums.televisionwithoutpity.com/index.php?showforum=1049"> Lipstick Jungle</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=707"> Lost</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=970"> Mad Men</option>
+
+<option value="http://forums.televisionwithoutpity.com/index.php?showforum=1044"> Make Me A Supermodel</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=0"> Mondo Extras</option>
 
@@ -347,6 +383,8 @@ function go(select){
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=987"> Reaper</option>
 
+<option value="http://forums.televisionwithoutpity.com/index.php?showforum=1038"> Rock of Love</option>
+
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=1024"> Samantha Who?</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=1029"> Scrubs</option>
@@ -358,6 +396,8 @@ function go(select){
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=810"> Supernatural</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=602"> Survivor</option>
+
+<option value="http://forums.televisionwithoutpity.com/index.php?showforum=1047"> Terminator</option>
 
 <option value="http://forums.televisionwithoutpity.com/index.php?showforum=867"> Top Chef</option>
 
@@ -413,13 +453,14 @@ function toggleDropDown(el){
 </script>
 <style>
 .divHeader{ z-index: 1000; }
-.divNavBar{ width:520px; right: 0px; }
+.divNavBar{ width:520px; right: 0px;}
 .divNavBar A, .divNavBar A:HOVER, .divNavBar A:VISITED{  }
 .divNavBar LI LI A, .divNavBar LI LI A:HOVER, .divNavBar LI LI A:VISITED{ font-size: 12px;  }
 .divNavBar LI LI A:HOVER{ }
-.divNavBar UL.ulNavBar { position: relative; float: left; width: 100%; margin: 0; padding: 0; list-style-type: none;  }
-.divNavBar UL.ulNavBar LI A.nav{ position: relative; float: left; height: 29px; display: block;  }
-.divNavBar UL.ulNavBar LI.nav { position: relative; background-image: url(/TWoPStaticAssest/Images/0.gif); float: left; height: 33px; padding: 0px 21px 0; border-left: 1px solid #A89340; }
+.divNavBar UL.ulNavBar { position: relative; float: left; width: 100%; margin: 0; padding: 0; list-style-type: none; font-size:12px; }
+.divNavBar UL.ulNavBar LI A.nav{ position: relative; float: left; height: 29px; display: block; font-size: 12px; padding: 3px 3px 2px 3px;  }
+.divNavBar UL.ulNavBar LI.nav {position: relative; background-image: url(/TWoPStaticAssest/Images/0.gif); float: left; height: 33px; padding: 0px 2px 0; border-left: 1px solid #A89340;left: -10px;}
+
 
 .divNavBar UL.ulNavBar LI.nav LI{ float: left; width: 150px; padding: 5px; border-bottom: 1px solid #EDC613; background-color: #FEDE33; text-align: left; }
 .divNavBar UL.ulNavBar LI UL{ display: none; }
@@ -429,10 +470,13 @@ function toggleDropDown(el){
 </style>
 <div class="divNavBar">
 	<ul class="ulNavBar">
-		<li class="nav first" onclick="" onmouseover=""><a href="/Shows" class="nav">ALL SHOWS</a></li>
-		<li class="nav" onclick="" onmouseover=""><a href="http://forums.televisionwithoutpity.com" class="nav">ALL FORUMS</a></li>
-		<li class="nav" onclick="" onmouseover=""><a href="http://www.tvbigshot.com" target="_blank" class="nav">TV BIGSHOT</a></li>
-		<li class="nav last" onclick="" onmouseover="toggleDropDown(this);" onmouseout="toggleDropDown(this);"><a href="#" class="nav">BLOGS</a><ul style=""><li><a href="http://blogs.televisionwithoutpity.com/thetelefile/">The Telefile</a></li><li><a href="http://blogs.televisionwithoutpity.com/goingthroughchannels/">Going Through Channels</a></li></ul></li>
+		<li class="nav first" onclick="" onmouseover=""><a href="/Shows" class="nav"><b>ALL SHOWS</b></a></li>
+		<li class="nav" onclick="" onmouseover=""><a href="http://forums.televisionwithoutpity.com" class="nav"><b>ALL FORUMS</b></a></li>
+		<li class="nav" onclick="" onmouseover=""><a href="http://affiliate.zap2it.com/tvlistings/ZCSGrid.do?aid=twop" class="nav"><b>TV LISTINGS</b></a></li>
+		<li class="nav" onclick="" onmouseover=""><a href="http://video.televisionwithoutpity.com/player/" class="nav"><b>VIDEO</b></a></li>
+		<li class="nav" onclick="" onmouseover=""><a href="http://features.televisionwithoutpity.com/photo-hub-1.php" class="nav"><b>PHOTOS</b></a></li>
+		<li class="nav" onclick="" onmouseover=""><a href="http://www.tvbigshot.com" target="_blank" class="nav"><b>TV BIGSHOT</b></a></li>
+		<li class="nav last" onclick="" onmouseover="toggleDropDown(this);" onmouseout="toggleDropDown(this);"><a href="#" class="nav"><b>BLOGS</b></a><ul><li><a href="http://blogs.televisionwithoutpity.com/thetelefile/">The Telefile</a></li><li><a href="http://blogs.televisionwithoutpity.com/goingthroughchannels/">Going Through Channels</a></li></ul></li>
 		<!--li class="nav" onclick="" onmouseover=""><a href="http://photos.televisionwithoutpity.com/" class="nav">PHOTOS</a></li>
 		<li class="nav last" onclick="" onmouseover=""><a href="/portal/site/TelevisionWithoutPity/Search" class="nav">SEARCH</a></li-->
 	</ul>
@@ -727,8 +771,8 @@ if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+
 <div id="footerAd" class="divfooterAd">
 
 <script language="JavaScript" type="text/javascript">
-document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj/nbcu.twop.b/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;network=tvn;sz=728x90;tagtype=js;pos=11;tile=11;ord='+ ord +'?" type="text/javascript"></scr'+'ipt>');
-</script><script language="JavaScript" src="http://ad.doubleclick.net/adj/nbcu.twop.b/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;network=tvn;sz=728x90;tagtype=js;pos=11;tile=11;ord=268952029435565.2?" type="text/javascript"></script><noscript><a href="http://ad.doubleclick.net/jump/nbcu.twop.b/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;network=tvn;sz=728x90;tagtype=js;pos=11;tile=11;ord=123456789?" target="_blank"><img src="http://ad.doubleclick.net/jump/nbcu.twop.b/twop_home;site=twop;sect=home;!category=home;!category=js;!category=twop;network=tvn;sz=728x90;tagtype=js;pos=11;tile=11;ord=123456789?" width="728" height="90" border="0" alt=""></a></noscript>
+document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj/nbcu.twop.b/twop_home;site=twop;sect=home;!category=home;!category=js;!category=noexpand;!category=twop;network=tvn;sz=728x90;tagtype=js;pos=11;tile=11;ord='+ ord +'?" type="text/javascript"></scr'+'ipt>');
+</script><script language="JavaScript" src="http://ad.doubleclick.net/adj/nbcu.twop.b/twop_home;site=twop;sect=home;!category=home;!category=js;!category=noexpand;!category=twop;network=tvn;sz=728x90;tagtype=js;pos=11;tile=11;ord=1829008420835165.2?" type="text/javascript"></script><noscript><a href="http://ad.doubleclick.net/jump/nbcu.twop.b/twop_home;site=twop;sect=home;!category=home;!category=js;!category=noexpand;!category=twop;network=tvn;sz=728x90;tagtype=js;pos=11;tile=11;ord=123456789?" target="_blank"><img src="http://ad.doubleclick.net/jump/nbcu.twop.b/twop_home;site=twop;sect=home;!category=home;!category=js;!category=noexpand;!category=twop;network=tvn;sz=728x90;tagtype=js;pos=11;tile=11;ord=123456789?" width="728" height="90" border="0" alt=""></a></noscript>
 
   
 </div></div>
@@ -842,4 +886,4 @@ document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj
 
 
 <page:include-page urlcontext="/vgn-ext-templating" pagepath="/in_line/trackDependencies.jsp">
-<!--47--></page:include-page></page:hide-template-menu-items></body></html>
+<!--60--></page:include-page></page:hide-template-menu-items></body></html>
